# modelgen

./: .gitignore  CMakeLists.txt
docs/: cpp_examples.md  door_info.md  macos.md
src/: main.cpp
src/core/: direction.cppm  doorgen.cppm  hinge.cppm  modelgen.cppm
src/core/vrtx/: vrtx.cppm
src/include/: buildstamp.hpp  wereMacro.hpp
tooling/: build.ps1
